--- a/pomodo/static/pomodo/css/timer.css
+++ b/pomodo/static/pomodo/css/timer.css
@@ -5,6 +5,21 @@
     font-family: sans-serif;
 }
 
+.settings {
+    margin-bottom: 20px;
+    font-size: 16px;
+}
+
+.settings label {
+    margin-right: 8px;
+}
+
+.settings input#duration-input {
+    width: 60px;
+    padding: 4px;
+    font-size: 14px;
+}
+
 #timer-display {
     font-size: 48px;
     margin: 20px 0;
